auto score completeley finished i think