@@ -4,6 +4,9 @@ package frc.robot.util;
 import static edu.wpi.first.units.Units.Degree;
 import static edu.wpi.first.units.Units.Degrees;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 
 import edu.wpi.first.math.geometry.Translation3d;
@@ -201,7 +204,7 @@ public class FieldConstant {
                 Base.mid_brg_wall.getTranslation().plus(source.rotateBy(new Rotation2d(Degrees.of(180)))),
                 new Rotation2d(Degrees.of(180)));
                 
-            public static List<Pose2d> asources = List.of(alliance_src, left_brg_src, right_brg_src, left_src_src, right_src_src, mid_brg_src);
+            public static List<Pose2d> asources = new LinkedList<Pose2d>(Arrays.asList(alliance_src, left_brg_src, right_brg_src, left_src_src, right_src_src, mid_brg_src));
 
             public static int algaeHeight(Pose2d algae_src) {
                 if (algae_src == alliance_src || algae_src == left_brg_src || algae_src == right_brg_src) {
